<resources>
    <string name="app_name">플로우데스크</string>
    <string-array name="email_domains">
        <item>직접입력</item>
        <item>gmail.com</item>
        <item>naver.com</item>
        <item>daum.net</item>
        <item>hanmail.net</item>
        <item>nate.com</item>
    </string-array>
    <string name="login_title">로그인하고\n간편하게 회원관리 하기</string>
    <string name="hint_tenant">회사명</string>
    <string name="hint_user_id">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="auto_login">자동 로그인</string>
    <string name="btn_login">로그인</string>
    <string name="not_member_yet">아직 회원이 아니신가요?</string>
    <string name="sign_up">계정 만들기</string>
    <string name="signup_subtitle">회원가입에 사용할 이메일 주소를 입력하세요.</string>
    <string name="label_company_name">업체명</string>
    <string name="hint_company_name">업체명</string>
    <string name="label_admin_name">관리자 이름</string>
    <string name="hint_admin_name">이름</string>
    <string name="label_email">이메일</string>
    <string name="hint_email_id">이메일주소</string>
    <string name="hint_email_domain">직접입력</string>
    <string name="label_phone">휴대폰 번호</string>
    <string name="hint_phone">휴대폰번호</string>
    <string name="label_password">비밀번호</string>
    <string name="desc_password">영문, 숫자, 특수문자를 포함한 8자 이상의 비밀번호를 입력해주세요.</string>
    <string name="error_password_format">영문, 숫자, 특수문자를 포함한 8자 이상의 비밀번호를 입력해주세요.</string>
    <string name="label_password_confirm">비밀번호 확인</string>
    <string name="hint_password_confirm">비밀번호 확인</string>
    <string name="error_password_mismatch">비밀번호가 틀렸습니다.</string>
    <string name="btn_signup_action">가입하기</string>
    <string name="text_sns_easy_login">기존 아이디로 로그인하기</string>
    <string name="error_required_fields">필수 항목을 모두 입력해주세요.</string>
    <string name="error_password_mismatch_simple">비밀번호가 일치하지 않습니다.</string>
    <string name="error_select_at_least_one_role">하나 이상의 역할을 선택해주세요.</string>
    <string name="success_user_invited">팀원 초대가 완료되었습니다.</string>
    <string name="error_no_changed_roles">변경된 역할이 없습니다.</string>
    <string name="error_password_min_length">비밀번호는 6자 이상 입력해주세요.</string>
    <string name="success_user_status_changed">사용자 상태가 변경되었습니다.</string>
    <string name="success_info_updated">정보가 성공적으로 변경되었습니다.</string>
    <string name="success_roles_changed">역할이 성공적으로 변경되었습니다.</string>
    <string name="success_password_changed">비밀번호가 변경되었습니다.</string>
    <string name="success_tokens_invalidated">모든 토큰이 무효화 되었습니다.</string>
    <string name="dialog_role_delete_title">역할 삭제</string>
    <string name="dialog_role_delete_message">\'%1$s\' 역할을 정말 삭제하시겠습니까?\n이 작업은 되돌릴 수 없습니다.</string>
    <string name="toast_status_change_requested">상태 변경을 요청했습니다.</string>
    <string name="toast_delete_requested">삭제 요청을 보냈습니다.</string>
    <string name="success_role_created">새 역할이 생성되었습니다.</string>
    <string name="error_fill_all_fields">모든 항목을 입력해주세요.</string>
    <string name="toast_invalid_access">잘못된 접근입니다.</string>
    <string name="toast_enter_name">이름을 입력해주세요.</string>
    <string name="dialog_role_copy_message">\'%1$s\' 역할의 권한 설정을\n이 역할에 복사할까요?\n\n(기존 권한은 모두 제거됩니다)</string>
    <string name="success_permissions_saved">권한이 저장되었습니다.</string>
    <string name="success_permissions_copied">다른 역할의 권한을 성공적으로 가져왔습니다.</string>
    <string name="success_role_info_updated">역할 정보가 수정되었습니다.</string>
    <string name="user_management_desc_role">설명</string>
    <string name="user_management_label_copy_title">다른 역할의 권한 복사</string>
    <string name="user_management_action_view_all_permissions">전체 권한 보기</string>
    <string name="user_management_label_role_management">역할 관리</string>
    <string name="user_management_desc_role_management">원하는 역할을 등록하고 권한을 부여하세요</string>
    <string name="user_management_label_total_role">전체 역할</string>
    <string name="user_management_label_active">활성</string>
    <string name="user_management_label_inactive">비활성</string>
    <string name="user_management_hint_search_role">역할 이름 검색...</string>
    <string name="user_management_label_role_list">역할 목록</string>
    <string name="user_management_empty_role_list">등록된 역할이 없습니다</string>
    <string name="user_management_empty_role_list_desc">플러스(+) 버튼으로 추가해보세요</string>
    <string name="user_management_title_detailed_permission_setup">세부 권한 설정</string>
    <string name="user_management_title_detailed_permission_mgmt">세부 권한 관리</string>
    <string name="user_management_desc_detailed_permission">각 메뉴별 접근 및 행동 권한을 켜고 끌 수 있습니다.</string>
    <string name="user_management_action_save_btn">저장하기</string>
    <string name="user_management_label_all_permission_list">전체 권한 목록</string>
    <string name="user_management_desc_all_permission_list">시스템에서 사용 가능한 모든 권한 목록입니다.\n개발자가 정의한 권한 키(Key)를 확인할 수 있습니다.</string>
    <string name="user_management_hint_search_permission">권한 이름 또는 키 검색...</string>
    <string name="user_management_status_loading">로딩 중...</string>
    <string name="user_management_desc_user_detail">팀원의 정보를 수정하거나 비활성화, 또는 강제 로그아웃을 수행할 수 있습니다.</string>
    <string name="user_management_label_basic_info">기본 정보</string>
    <string name="user_management_label_user_id">사용자 ID</string>
    <string name="user_management_label_company_name">회사명</string>
    <string name="user_management_label_name">이름</string>
    <string name="user_management_label_email">이메일</string>
    <string name="user_management_label_phone">전화번호</string>
    <string name="user_management_label_mobile">휴대폰</string>
    <string name="user_management_label_reg_date_format">가입일: </string>
    <string name="user_management_title_invite_new_member">새로운 팀원을\n초대할 수 있어요.</string>
    <string name="user_management_title_invite_new_member_simple">팀원 초대</string>
    <string name="user_management_label_copy_permission_count">권한 개수</string>
    <string name="user_management_label_copy_role_users">역할 사용자</string>
    <string name="toast_status_changed">상태가 변경되었습니다.</string>
    <string name="toast_role_deleted">역할이 삭제되었습니다.</string>
    <string name="user_management_label_account_info">계정 정보</string>
    <string name="user_management_label_password">비밀번호</string>
    <string name="user_management_label_password_confirm">비밀번호 확인</string>
    <string name="user_management_label_role_setup">역할 설정</string>
    <string name="user_management_status_no_role_selected">선택된 역할: 없음</string>
    <string name="user_management_action_invite">초대하기</string>
    <string name="user_management_banner_title_what_is_team_mgmt">팀원 관리란?</string>
    <string name="user_management_banner_desc_what_is_team_mgmt">새로운 팀원을 초대하고 역할을 부여하세요</string>
    <string name="user_management_banner_body_what_is_team_mgmt">팀원별로 역할을 설정하고 권한을 관리하여,\n시스템 접근 및 사용을 안전하게 제어합니다.</string>
    <string name="user_management_hint_search_user">이름, 이메일, ID 검색하세요.</string>
    <string name="user_management_label_user_list">팀원 목록</string>
    <string name="user_management_label_total_user">전체 사용자</string>
    <string name="user_management_action_logout">로그아웃</string>
    <string name="user_management_label_user_prefix">사용자 </string>
    <string name="user_management_label_permission_prefix">권한 </string>
    <string name="user_management_action_delete">삭제</string>
    <string name="user_management_title_create_role">새 역할 생성</string>
    <string name="user_management_desc_create_role">새로운 직무나 팀에 맞는 역할을 정의하세요</string>
    <string name="user_management_label_role_display_name">역할 표시 이름</string>
    <string name="user_management_label_system_role_code">시스템 역할 코드</string>
    <string name="user_management_hint_role_desc">역할에 대한 간략한 설명을 입력해주세요.</string>
    <string name="user_management_action_create">생성하기</string>
    <string name="status_msg_enter_group">업무 분류를 입력해주세요.</string>
    <string name="status_msg_enter_name">상태 이름을 입력해주세요.</string>
    <string name="status_msg_invalid_color_format">색상은 #RRGGBB 형식만 허용됩니다. (예: #3B82F6)</string>
    <string name="status_msg_updated">상담 상태가 수정되었습니다.</string>
    <string name="status_msg_enter_key">상태 고유 키(Key)를 입력해주세요.</string>
    <string name="status_msg_invalid_key">상태 키는 영문 소문자, 숫자, 언더스코어(_)만 가능합니다.</string>
    <string name="status_msg_duplicate_key">해당 그룹에 이미 동일한 상태 키가 존재합니다.</string>
    <string name="status_msg_created">상담 상태가 추가되었습니다.</string>
    <string name="block_msg_enter_reason">차단 사유를 입력해주세요.</string>
    <string name="block_msg_reason_updated">차단 사유가 수정되었습니다.</string>
    <string name="block_msg_reason_update_failed">수정에 실패했습니다.</string>
    <string name="block_ip_msg_created">차단 IP가 성공적으로 등록되었습니다.</string>
    <string name="block_ip_msg_deleted">IP 차단이 해제되었습니다.</string>
    <string name="block_ip_msg_enter_ip">차단할 IP 주소를 입력해주세요.</string>
    <string name="block_ip_msg_enter_ips">차단할 IP 주소 목록을 입력해주세요.</string>
    <string name="block_ip_msg_bulk_success">대량 IP 등록 완료 (성공: %1$d건, 건너뜀: %2$d건)</string>
    <string name="block_keyword_msg_created">금칙어가 성공적으로 등록되었습니다.</string>
    <string name="block_keyword_msg_deleted">금칙어 차단이 해제되었습니다.</string>
    <string name="block_keyword_msg_enter_keyword">금칙어를 입력해주세요.</string>
    <string name="block_keyword_msg_enter_keywords">금칙어 목록을 입력해주세요.</string>
    <string name="block_keyword_msg_bulk_success">대량 금칙어 등록 완료 (성공: %1$d건, 건너뜀: %2$d건)</string>
    <string name="block_phone_msg_created">차단 번호가 성공적으로 등록되었습니다.</string>
    <string name="block_phone_msg_deleted">휴대폰 차단이 해제되었습니다.</string>
    <string name="block_phone_msg_enter_phone">차단할 휴대폰 번호를 입력해주세요.</string>
    <string name="block_phone_msg_invalid_phone">유효한 휴대폰 번호를 입력해주세요.</string>
    <string name="block_phone_msg_enter_phones">차단할 휴대폰 번호 목록을 입력해주세요.</string>
    <string name="block_phone_msg_no_valid_phone">차단할 유효한 번호가 없습니다.</string>
    <string name="block_phone_msg_bulk_success">대량 번호 등록 완료 (성공: %1$d건, 건너뜀: %2$d건)</string>
    <string name="block_ip_msg_updated">IP 차단 정보가 수정되었습니다.</string>
    <string name="block_keyword_msg_updated">금칙어 정보가 수정되었습니다.</string>
    <string name="block_phone_msg_updated">휴대폰 차단 정보가 수정되었습니다.</string>
    <string name="tenant_msg_enter_name">테넌트명을 입력해주세요.</string>
    <string name="tenant_msg_enter_display_name">표시 이름을 입력해주세요.</string>
    <string name="tenant_msg_enter_domain">도메인을 입력해주세요.</string>
    <string name="tenant_msg_created">테넌트가 생성되었습니다.</string>
    <string name="tenant_msg_deleted">테넌트가 삭제되었습니다.</string>
    <string name="tenant_msg_status_changed">상태가 변경되었습니다.</string>
    <string name="tenant_msg_status_change_requested">상태 변경을 요청했습니다.</string>
    <string name="tenant_delete_title">테넌트 삭제</string>
    <string name="tenant_delete_message">\'%1$s\' 테넌트를 정말 삭제하시겠습니까?\n이 작업은 되돌릴 수 없습니다.</string>
    <string name="tenant_msg_updated">테넌트 정보가 수정되었습니다.</string>
    <string name="page_msg_enter_name">페이지 이름을 입력해주세요.</string>
    <string name="page_msg_enter_display_name">표시 이름을 입력해주세요.</string>
    <string name="page_msg_enter_path">경로를 입력해주세요.</string>
    <string name="page_msg_created">페이지가 생성되었습니다.</string>
    <string name="page_msg_deleted">페이지가 삭제되었습니다.</string>
    <string name="page_msg_status_changed">페이지 상태가 변경되었습니다.</string>
    <string name="page_delete_title">페이지 삭제</string>
    <string name="page_delete_message">\'%1$s\' 페이지를 삭제하시겠습니까?\n이 작업은 되돌릴 수 없습니다.</string>
    <string name="action_msg_enter_name">액션 이름을 입력해주세요.</string>
    <string name="action_msg_enter_display_name">표시 이름을 입력해주세요.</string>
    <string name="action_msg_created">액션이 생성되었습니다.</string>
    <string name="action_msg_deleted">액션이 삭제되었습니다.</string>
    <string name="mypage_btn_change_password">비밀번호 변경</string>
    <string name="mypage_label_current_password">현재 비밀번호</string>
    <string name="mypage_hint_current_password">현재 비밀번호를 입력해주세요</string>
    <string name="mypage_label_new_password">새 비밀번호</string>
    <string name="mypage_hint_new_password">영문, 숫자, 특수문자 포함 8자리 이상</string>
    <string name="mypage_label_confirm_password">새 비밀번호 확인</string>
    <string name="mypage_hint_confirm_password">새 비밀번호를 한번 더 입력해주세요</string>
    <string name="mypage_btn_change">변경하기</string>
</resources>